--- a/index.html
+++ b/index.html
@@ -2,38 +2,28 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Удостоверение личности</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&display=swap" />
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-      <h1>Удостоверение личности</h1>
-    </div>
+  <div class="navbar">
+    <span class="back-arrow">←</span>
+    <span class="title">Удостоверение личности</span>
+  </div>
 
-    <div class="tabs">
-      <button class="tab active">Документ</button>
-      <button class="tab">Реквизиты</button>
-    </div>
+  <div class="tabs">
+    <button class="tab active">Документ</button>
+    <button class="tab">Реквизиты</button>
+  </div>
 
-    <div class="content">
-      <div class="placeholder">
-        <p>Данные скрыты</p>
-      </div>
-    </div>
+  <div class="content">
+    <!-- Здесь будет документ -->
+  </div>
 
-    <div class="actions">
-      <button class="btn-primary">
-        <img src="https://img.icons8.com/ios-glyphs/20/ffffff/qr-code.png" alt="QR" />
-        Предъявить документ
-      </button>
-      <button class="btn-secondary">
-        <img src="https://img.icons8.com/ios-glyphs/20/000000/share.png" alt="Share" />
-        Отправить документ
-      </button>
-    </div>
+  <div class="btn-block">
+    <button class="btn-primary">📄 Предъявить документ</button>
+    <button class="btn-secondary">🔗 Отправить документ</button>
   </div>
 </body>
 </html>
